# cospit

./: .gitignore  README.md  setup.cfg
.github/workflows/: basic.yml
scripts/: example.py
src/cospit/: __init__.py  brette.py  core.py  spiketrains.py
tests/: test_spiketrains.py
