[metadata]
name = cospit
version = 0.0.1
author = Sebastian Schmitt
author_email = sebastian.schmitt@phys.uni-goettingen.de
description = A package to generate correlated spike trains according to Brette 2008
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tetzlab/cospit
project_urls =
    Bug Tracker = https://github.com/tetzlab/cospit/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy

[options.packages.find]
where = src